# BmpProcess

./: .gitignore  0  CMakeLists.txt  HoughChange.cpp  Makefile  README.md  test.py  test14.py  test15.py  test16.py  test17.py  test20.py  test3.py  test5.py  test6.py  test7.py  test8.py
include/: _cv.h  _cvgeom.h  _cvhaartraining.h  _cvimgproc.h  _cvipp.h  _cxcore.h  _cxipp.h  _geom.h  _highgui.h  common.h  contours.h  core.h  core.hpp  core.precomp.hpp  core.version_string.inc  core_c.h  cv.h  cv.hpp  cvclassifier.h  cvcompat.h  cvhaartraining.h  cvtypes.h  cxcore.h  cxcore.hpp  cxerror.h  cxmisc.h  cxtypes.h  error.h  highgui.h  highgui_c.h  imgproc.hpp  imgproc.precomp.hpp  imgproc_c.h  internal.hpp  mat.hpp  misc.h  operations.hpp  precomp.hpp  process.h  system.h  (+2 more)
python/: HLine.py  HLine2.py  adaptiveThreshold.py  bilateralFilter.py  gamma.py  test.py  test10.py  test12.py  test13.py  test17.py  test18.py  test2.py  test20.py  test21.py  test22.py  test23.py  test25.py  test26.py  test27.py  test4.py  test5.py  test9.py
src/: HoughChange.cpp  Makefile  MakefileCV  adaptiveThreshold.cpp  alloc.cpp  approx.cpp  arithm.cpp  array.cpp  bilateralFilter.cpp  bitstrm.cpp  bitstrm.h  bitstrm.hpp  bmp.cpp  bmp.h  box.cpp  c_canny.cpp  canny.cpp  canny.h  color.cpp  common.h  contours.cpp  convert.cpp  convhull.cpp  copy.cpp  cvLaplace.cpp  cvapprox.cpp  cvboost.cpp  cvcanny.cpp  cvcolor.cpp  cvcontours.cpp  cvconvhull.cpp  cvderiv.cpp  cvfilter.cpp  cvhaartraining.cpp  cvimgwarp.cpp  cvmoments.cpp  cvmorph.cpp  cvrotcalipers.cpp  cvsamples.cpp  cvshapedescr.cpp  (+86 more)
(+38 files in other folders)
